# Anonymizer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  anonymizer  cmake_install.cmake  request.txt  response.txt  server.cpp
capnproto/: http_log.capnp
compiled/: anonymizer  http_log.capnp.c++  http_log.capnp.h
include/: CapncapDecoder.hpp  HttpLog.hpp  HttpLogQueries.hpp  HttpSender.hpp  KafkaConsumer.hpp  KafkaHandler.hpp  OutputHandler.hpp  ThreadSafeQueue.hpp
src/: HttpLog.cpp  HttpSender.cpp  KafkaConsumer.cpp  KafkaHandler.cpp  OutputHandler.cpp  ThreadSafeQueue.cpp  main.cpp  request.txt  response.txt  server.cpp
